--- a/config/tsvad_config.json
+++ b/config/tsvad_config.json
@@ -30,6 +30,8 @@
         "model_type": "TSVAD",
         "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_ivec/02-01_12-04_1",
         "output_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_probs",
+        "hyp_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_rttm",
+        "ref_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_rttm",
         "eval_dir": "/exhome1/weiguang/data/M2MET/Eval_Ali_far",
         "test_dir": "/exhome1/weiguang/data/M2MET/Test_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
