--- a/config/tsvad_config.json
+++ b/config/tsvad_config.json
@@ -3,7 +3,7 @@
         "training_dir": "/exhome1/weiguang/data/Alimeeting/Train_Ali_far",
         "eval_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
-        "output_directory": "checkpoints/tsvad_ivec_logmel_5",
+        "output_directory": "checkpoints/tsvad_ivec_logmel_7",
         "trainer_type": "basic",
         "model_type": "TSVAD",
         "max_iter": 500000,
@@ -31,7 +31,7 @@
     },
     "infer_config": {
         "model_type": "TSVAD",
-        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_ivec_logmel_5/02-07_07-22_10",
+        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_ivec_logmel_7/02-08_15-22_30",
         "output_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_probs",
         "hyp_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_rttm",
         "ref_rttm_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far/rttm_groundtruth",
@@ -45,7 +45,8 @@
     },
     "model_config": {
         "out_channels": [ 64, 64, 128, 128],
-        "nproj": 384,
+        "rproj": 128,
+        "nproj": 160,
         "cell": 896,
         "feat_dim": 80, 
         "vec_dim": 400
