--- a/config/tsvad_config_xvec.json
+++ b/config/tsvad_config_xvec.json
@@ -3,7 +3,7 @@
         "training_dir": "/exhome1/weiguang/data/Alimeeting/Train_Ali_far",
         "eval_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
-        "output_directory": "checkpoints/tsvad_xvec_logmel_5",
+        "output_directory": "checkpoints/tsvad_xvec_logmel_12",
         "trainer_type": "basic",
         "model_type": "TSVAD",
         "max_iter": 500000,
@@ -11,7 +11,7 @@
         "optimize_param": {
             "optim_type": "RAdam",
             "learning_rate": 1e-4,
-            "max_grad_norm": 10,
+            "max_grad_norm": 5.0,
             "lr_scheduler":{
                 "step_size": 100000,
                 "gamma": 0.5,
@@ -20,33 +20,37 @@
         },
         "batch_size": 16,
         "nframes": 800,
+        "chunk_step": 600,
         "iters_per_checkpoint": 10000,
         "iters_per_log": 1,
         "seed": 1234,
         "checkpoint_path": "",
         "epochs_per_eval": 1,
         "vec_type": "xvec",
-        "feat_type": "logmel",
-        "num_workers": 24
+        "feat_type": "mfcc",
+        "num_workers": 16
     },
     "infer_config": {
         "model_type": "TSVAD",
-        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_xvec_logmel_5/02-06_14-09_2",
+        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_xvec_logmel_12/02-12_17-57_2",
         "output_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_probs",
         "hyp_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_rttm",
         "ref_rttm_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far/rttm_groundtruth",
         "eval_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far",
         "test_dir": "/exhome1/weiguang/data/Alimeeting/Test_Ali/Test_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
-        "nframes": 1000,
+        "nframes": 800,
+        "chunk_step": 600,
         "max_speakers": 4,
         "vec_type": "xvec",
-        "feat_type": "logmel"
+        "feat_type": "mfcc"
     },
     "model_config": {
         "out_channels": [ 64, 64, 128, 128],
-        "nproj": 384,
+        "rproj": 256,
+        "nproj": 256,
         "cell": 896,
-        "dprnn_layers": 6
+        "feat_dim": 24, 
+        "vec_dim": 512
     }
 }
