--- a/config/tsvad_config_xvec_1it.json
+++ b/config/tsvad_config_xvec_1it.json
@@ -3,7 +3,7 @@
         "training_dir": "/exhome1/weiguang/data/Alimeeting/Train_Ali_far",
         "eval_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
-        "output_directory": "checkpoints/tsvad_xvec_logmel_14",
+        "output_directory": "checkpoints/tsvad_xvec_logmel_13",
         "trainer_type": "basic",
         "model_type": "TSVAD",
         "max_iter": 500000,
@@ -32,12 +32,12 @@
     },
     "infer_config": {
         "model_type": "TSVAD",
-        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_xvec_logmel_14/02-17_12-30_2",
-        "output_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_probs",
-        "output_xvector_dir": "",
-        "hyp_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/hyp_rttm",
-        "ref_rttm_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far/rttm_groundtruth",
-        "eval_dir": "/exhome1/weiguang/data/Alimeeting/Eval_Ali/Eval_Ali_far",
+        "model_path": "/exhome1/weiguang/code/TSVAD-pytorch/checkpoints/tsvad_xvec_logmel_12/avg",
+        "output_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/Test/tsvad_1it/hyp_probs",
+        "output_xvector_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/Test/tsvad_1it/xvec",
+        "hyp_rttm_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/Test/tsvad_1it/hyp_rtmm",
+        "ref_rttm_dir": "/exhome1/weiguang/data/Alimeeting/Test_Ali/Test_Ali_far/rttm_groundtruth",
+        "eval_dir": "/exhome1/weiguang/data/Alimeeting/Test_Ali/Test_Ali_far",
         "test_dir": "/exhome1/weiguang/data/Alimeeting/Test_Ali/Test_Ali_far",
         "mfcc_config": "config/mfcc_extractor.json",
         "nframes": 800,
@@ -45,7 +45,7 @@
         "max_speakers": 4,
         "vec_type": "xvec",
         "feat_type": "mfcc",
-        "vec_dir": "",
+        "vec_dir": "/exhome1/weiguang/code/TSVAD-pytorch/exp/Test/cluster/xvec",
         "feat_dir": ""
     },
     "model_config": {
